<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>seatrac</name>
  <version>1.0.0</version>
  <description>
    A ROS2 node that interfaces with the seatrac x150 beacon
  </description>
  <maintainer email="cas314@byu.edu">Clayton Smith</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <!-- <depend>seatrac_driver</depend> -->

  <build_depend>seatrac_interfaces</build_depend>
  <exec_depend>seatrac_interfaces</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>